백엔드 구조 수정