@@ -18,143 +18,98 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
-import java.util.ArrayList;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class OrdersService {
 
-    private final UserAddressRepository userAddressRepository;
     private final OrdersRepository ordersRepository;
-    private final ImageRepository imageRepository;
+    private final UserAddressRepository userAddressRepository;
     private final ProductRepository productRepository;
+    private final ImageRepository imageRepository;
 
-    // 사용자별 주문 목록 조회
-    public List<OrdersResponse> getOrdersByUserId(SiteUser siteUser) {
-        List<Orders> orders = ordersRepository.findValidOrders(siteUser);
-        List<Orders> distinctOrders = new ArrayList<>(new LinkedHashSet<>(orders));
-
-        return distinctOrders.stream()
-                .map(order -> OrdersResponse.from(order, imageRepository))
-                .collect(Collectors.toList());
+    public List<OrdersResponse> getOrdersByUser(SiteUser user) {
+        return ordersRepository.findValidOrders(user)
+                .stream()
+                .distinct()
+                .map(o -> OrdersResponse.from(o, imageRepository))
+                .toList();
     }
 
-    // 주문 상세 조회
-    public OrdersResponse getOrderDetail(Long orderId) {
-        Orders order = ordersRepository.findByIdWithDeliveries(orderId)
-                .orElseThrow(() -> new IllegalArgumentException("주문을 찾을 수 없습니다."));
+    public OrdersResponse getOrderDetail(Long orderId, SiteUser user) {
+        Orders order = ordersRepository.findByOrderIdAndSiteUser(orderId, user)
+                .orElseThrow(() -> new IllegalArgumentException("권한 없음"));
 
         return OrdersResponse.from(order, imageRepository);
     }
 
-    // 주문 삭제
     @Transactional
-    public void deleteOrder(Long orderId) {
-        Orders order = ordersRepository.findById(orderId)
-                .orElseThrow(() -> new IllegalArgumentException("주문을 찾을 수 없습니다."));
+    public void deleteOrder(Long orderId, SiteUser user) {
+        Orders order = ordersRepository.findByOrderIdAndSiteUser(orderId, user)
+                .orElseThrow(() -> new IllegalArgumentException("권한 없음"));
 
         ordersRepository.delete(order);
     }
 
-    // 주문 취소
     @Transactional
-    public OrdersResponse cancelOrder(Long orderId, String reason) {
-        Orders order = ordersRepository.findByIdWithDeliveries(orderId)
-                .orElseThrow(() -> new IllegalArgumentException("주문을 찾을 수 없습니다."));
+    public OrdersResponse cancelOrder(Long orderId, SiteUser user, String reason) {
+        Orders order = ordersRepository.findByIdAndSiteUserWithDeliveries(orderId, user)
+                .orElseThrow(() -> new IllegalArgumentException("권한 없음"));
 
-        order.getDeliveries().stream()
-                .findFirst()
-                .ifPresent(delivery -> {
-                    if (!"배송준비중".equals(delivery.getDeliveryStatus())) {
-                        throw new IllegalStateException("배송 준비중 상태일 때만 주문 취소가 가능합니다.");
-                    }
-                    delivery.setDeliveryStatus("취소");
-                });
-
-        order.setStatus("취소");
-        order.setReason(reason);
-        ordersRepository.save(order);
-
+        order.cancel(reason);
         return OrdersResponse.from(order, imageRepository);
     }
 
-    // 반품 신청
     @Transactional
-    public OrdersResponse returnOrder(Long orderId, String reason) {
-        Orders order = ordersRepository.findByIdWithDeliveries(orderId)
-                .orElseThrow(() -> new IllegalArgumentException("주문을 찾을 수 없습니다."));
+    public OrdersResponse returnOrder(Long orderId, SiteUser user, String reason) {
+        Orders order = ordersRepository.findByIdAndSiteUserWithDeliveries(orderId, user)
+                .orElseThrow(() -> new IllegalArgumentException("권한 없음"));
 
-        order.getDeliveries().stream()
-                .findFirst()
-                .ifPresent(delivery -> {
-                    if (!"배송완료".equals(delivery.getDeliveryStatus())) {
-                        throw new IllegalStateException("배송 완료된 주문만 반품 신청이 가능합니다.");
-                    }
-                    delivery.setDeliveryStatus("반품");
-                });
-
-        order.setStatus("반품");
-        order.setReason(reason);
-        ordersRepository.save(order);
-
+        order.returnOrder(reason);
         return OrdersResponse.from(order, imageRepository);
     }
 
-    // 교환 신청
     @Transactional
-    public OrdersResponse exchangeOrder(Long orderId, String reason) {
-        Orders order = ordersRepository.findByIdWithDeliveries(orderId)
-                .orElseThrow(() -> new IllegalArgumentException("주문을 찾을 수 없습니다."));
+    public OrdersResponse exchangeOrder(Long orderId, SiteUser user, String reason) {
+        Orders order = ordersRepository.findByIdAndSiteUserWithDeliveries(orderId, user)
+                .orElseThrow(() -> new IllegalArgumentException("권한 없음"));
 
-        order.getDeliveries().stream()
-                .findFirst()
-                .ifPresent(delivery -> {
-                    if (!"배송완료".equals(delivery.getDeliveryStatus())) {
-                        throw new IllegalStateException("배송 완료된 주문만 교환 신청이 가능합니다.");
-                    }
-                    delivery.setDeliveryStatus("교환");
-                });
-
-        order.setStatus("교환");
-        order.setReason(reason);
-        ordersRepository.save(order);
-
+        order.exchange(reason);
         return OrdersResponse.from(order, imageRepository);
     }
 
-    public List<OrdersResponse> getInfiniteOrders(Long userId, Long lastOrderId, int size) {
+    public List<OrdersResponse> getInfiniteOrders(SiteUser user, Long lastOrderId, int size) {
         Pageable pageable = PageRequest.of(0, size);
 
-        List<Orders> orders = ordersRepository.findInfiniteOrders(userId, lastOrderId, pageable);
-
-        return orders.stream()
-                .map(order -> OrdersResponse.from(order, imageRepository))
+        return ordersRepository.findInfiniteOrders(user.getId(), lastOrderId, pageable)
+                .stream()
+                .map(o -> OrdersResponse.from(o, imageRepository))
                 .toList();
     }
 
     @Transactional
-    public PrepareOrderResponse prepareCartOrder(SiteUser user, List<CartOrderItemDto> items, Long addressId) {
-
-        UserAddress address = userAddressRepository.findById(addressId)
-                .orElseThrow(() -> new IllegalArgumentException("배송지를 찾을 수 없습니다."));
-
-        BigDecimal total = BigDecimal.ZERO;
+    public PrepareOrderResponse prepareCartOrder(
+            SiteUser user,
+            List<CartOrderItemDto> items,
+            Long addressId
+    ) {
+        UserAddress address = userAddressRepository
+                .findByUserAddressIdAndSiteUser_Id(addressId, user.getId())
+                .orElseThrow(() -> new IllegalArgumentException("배송지 권한 없음"));
 
         Orders order = Orders.createTempOrder(user);
 
+        BigDecimal total = BigDecimal.ZERO;
+
         for (CartOrderItemDto item : items) {
             Product product = productRepository.findById(item.getProductId())
-                    .orElseThrow(() -> new IllegalArgumentException("상품을 찾을 수 없습니다."));
+                    .orElseThrow(() -> new IllegalArgumentException("상품 없음"));
 
             BigDecimal price = BigDecimal.valueOf(product.getBasePrice());
-            BigDecimal itemTotal = price.multiply(BigDecimal.valueOf(item.getQuantity()));
-
-            total = total.add(itemTotal);
+            total = total.add(price.multiply(BigDecimal.valueOf(item.getQuantity())));
 
             order.addOrderItem(product, item.getQuantity(), price);
         }
@@ -164,14 +119,13 @@ public class OrdersService {
         order.setOrderCode("ORD_" + UUID.randomUUID());
 
         ordersRepository.save(order);
-
         return new PrepareOrderResponse(order.getOrderCode(), total.longValueExact());
     }
 
     @Transactional
-    public void cancelBeforePayment(String orderCode) {
-        Orders order = ordersRepository.findByOrderCode(orderCode)
-                .orElseThrow(() -> new IllegalArgumentException("해당 주문을 찾을 수 없습니다."));
+    public void cancelBeforePayment(SiteUser user, String orderCode) {
+        Orders order = ordersRepository.findByOrderCodeAndSiteUser(orderCode, user)
+                .orElseThrow(() -> new IllegalArgumentException("권한 없음"));
 
         ordersRepository.delete(order);
     }
@@ -185,6 +139,4 @@ public class OrdersService {
                 .map(order -> OrdersResponse.from(order, imageRepository))
                 .toList();
     }
-
-
 }
